@@ -4,8 +4,8 @@ SCREENHEIGHT = 720
 FULLSCREEN = false
 
 [AUDIO]
-MASTER = 10
-EFFECTS = 10
+MASTER = 8
+EFFECTS = 7
 AMBIENT = 10
 
 [GAMEPLAY]
